# GZDoom-Android-2026

./: .gitignore  CHANGELOG.md  CLAUDE.md  PNG2WAD_MAP_EDITOR.md  README.md  build.gradle.kts  build_native.sh  gradle.properties  settings.gradle.kts
.jni-golden/: com.beloko.AssetFileAccess.txt  com.beloko.libsdl.SDLLib.txt  com.beloko.touchcontrols.ActionInput.txt  com.beloko.touchcontrols.ControlConfig$Type.txt  com.beloko.touchcontrols.ControlInterface.txt  com.beloko.touchcontrols.CustomCommands.txt  com.beloko.touchcontrols.ShowKeyboard.txt  com.beloko.touchcontrols.TouchControlsEditing$ControlInfo.txt  com.beloko.touchcontrols.TouchControlsEditing.txt  com.beloko.touchcontrols.TouchControlsSettings.txt  com.opentouchgaming.androidcore.AssetFileAccess.txt  com.opentouchgaming.saffal.FileJNI.txt  com.opentouchgaming.saffal.UtilsSAF.txt  net.nullsum.freedoom.MyGLSurfaceView.txt  net.nullsum.freedoom.NativeLib.txt  org.libsdl.app.NativeConsoleBox.txt  org.libsdl.app.NativeLib.txt  org.libsdl.app.SDLActivity.txt  org.libsdl.app2012.SDLActivity.txt  org.libsdl.app2012.SDLAudioManager.txt  verify.sh  (+1 more)
doom/: build.gradle.kts
png2wad-sdk/src/main/cpp/: CMakeLists.txt  Config.cpp  Config.h  DoomDefines.h  DoomMap.cpp  DoomMap.h  Generator.cpp  Generator.h  INIFile.cpp  INIFile.h  Log.h  PNGToWad.cpp  PNGToWad.h  TextureReader.cpp  TextureReader.h  Toolbox.cpp  Toolbox.h  WadFile.cpp  WadFile.h  png2wad-jni.cpp  textures-jni.cpp
png2wad-sdk/src/main/cpp/tools/: build_cli.sh  build_texture_probe.sh  png2wad_cli.cpp  texture_probe.cpp  validate_wad.py
png2wad-sdk/src/main/cpp/zdbsp/: getopt.h  main.cpp  processor.cpp  view.cpp  zdbsp.h
(+2365 files in other folders)
